--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,10 @@ html,
 body {
     height: 100%;
     line-height: 1;
-    font-size: 16px;
-    color: black;
+    font-size: 14px;
+    color: #252B42;
+    font-family: Montserrat;
+    font-weight: 500;
 }
 
 
@@ -47,9 +49,365 @@ body {
 .wrapper {
     min-height: 100%;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 ._container {
     max-width: 1046px;
     margin: 0px auto;
+    padding: 0px 15px;
+    box-sizing: content-box;
 }
+
+._ibg {
+    position: relative;
+}
+
+._ibg img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+
+
+/*start_header*****************************************************************************************************************************/
+
+.header {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 50;
+}
+
+.header__container {
+    display: flex;
+    min-height: 104px;
+    align-items: center;
+}
+
+@media (max-width: 479px) {
+    .header__container {
+        min-height: 70px;
+    }
+}
+
+.header__logo {
+    font-size: 24px;
+    font-weight: 700;
+    color: inherit;
+}
+
+.header__menu {
+    margin-left: 133px;
+}
+
+@media (max-width: 992px) {
+    /*adaptive*/
+    .header__menu {
+        margin-left: 80px;
+    }
+}
+
+@media (max-width: 767px) {
+    .header__menu {
+        margin-left: 40px;
+    }
+}
+
+@media (max-width: 479px) {
+    .header__menu {
+        margin-left: 20px;
+    }
+}
+
+.menu {
+    padding: 5px 0px;
+}
+
+.menu__list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.menu__item {
+    margin-right: 21px;
+}
+
+.menu__item:last-child {
+    margin-right: 0px;
+}
+
+.menu__link {
+    color: #737373;
+    font-size: 14px;
+    line-height: 171%;
+    font-weight: 600;
+}
+
+@media (max-width: 479px) {
+    .menu__link {
+        font-size: 18px;
+    }
+}
+
+
+/*start_main*****************************************************************************************************************************/
+
+.main {
+    flex: 1 1 auto;
+}
+
+.main__main-block {}
+
+.main__services {
+    position: relative;
+    z-index: 2;
+    margin-top: -121px;
+}
+
+
+/*end_main*****************************************************************************************************************************/
+
+
+/*start_main-block*****************************************************************************************************************************/
+
+.main-block {
+    position: relative;
+}
+
+.main-block__container {}
+
+.main-block__body {
+    padding-top: 184px;
+    padding-bottom: 191px;
+    position: relative;
+    z-index: 2;
+    max-width: 400px;
+}
+
+.main-block__body>*:not(:last-child) {
+    /*full 1 level*/
+    margin-bottom: 35px;
+}
+
+@media (max-width:1110px) {
+    .main-block__body {
+        padding-top: 120px;
+    }
+}
+
+@media (max-width:480px) {
+    .main-block__body {
+        padding-bottom: 150px;
+    }
+}
+
+.main-block__title {
+    font-weight: 800;
+    font-size: 58px;
+    line-height: 138%;
+    letter-spacing: 0.2px;
+}
+
+@media (max-width:480px) {
+    .main-block__title {
+        font-size: 42px;
+    }
+}
+
+.main-block__text {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 150%;
+    color: #737373;
+}
+
+@media (max-width:480px) {
+    .main-block__text {
+        color: #474747;
+        text-shadow: #ffffff 1px 3px 1px;
+    }
+}
+
+.main-block__buts {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -10px 0;
+}
+
+.main-block__but {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 36px;
+    border-radius: 37px;
+    min-height: 48px;
+    letter-spacing: 0.2px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 150%;
+    text-align: center;
+    margin: 10px 0;
+}
+
+@media (max-width:480px) {
+    .main-block__but {
+        flex: 1 1 100%;
+    }
+}
+
+@media (min-width:480px) {
+    .main-block__but:not(:last-child) {
+        margin-right: 10px;
+    }
+}
+
+.main-block__but_orange {
+    background: #FF7B47;
+    color: rgb(255, 255, 255);
+}
+
+.main-block__but_border {
+    color: #0D5C63;
+    border: 1px solid #0D5C63;
+}
+
+.main-block__image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+@media (max-width:1300px) {
+    .main-block__image img {
+        object-position: right;
+    }
+}
+
+@media (max-width:1110px) {
+    .main-block__image {
+        opacity: 0.15;
+    }
+}
+
+
+/*end_main-block*****************************************************************************************************************************/
+
+
+/*start_services*****************************************************************************************************************************/
+
+.services {}
+
+.services__container {}
+
+.services__budy {}
+
+@media (min-width:670px) {
+    .services__budy {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0px -15px;
+    }
+}
+
+.services__column {
+    flex: 0 1 33.333%;
+}
+
+@media (min-width:670px) {
+    .services__column {
+        padding: 0px 15px;
+    }
+}
+
+@media (max-width:1110px) {
+    .services__column {
+        flex: 0 1 50%;
+        margin-bottom: 30px;
+    }
+    .services__column:last-child {
+        flex: 1 1 100%;
+        margin-bottom: 0px;
+    }
+}
+
+.services__item {
+    height: 100%;
+    box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+    background-color: white;
+    padding: 35px;
+}
+
+@media (max-width:670px) {
+    .services__item {
+        padding: 20px;
+    }
+}
+
+.item-service {}
+
+.item-service_green {
+    background-color: #0D5C63;
+}
+
+.item-service_green .item-service__title {
+    color: white;
+}
+
+.item-service_green .item-service__text {
+    color: white;
+}
+
+.item-service>*:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.item-service__icon {}
+
+.item-service__title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 133%;
+    letter-spacing: 0.1px;
+}
+
+.item-service__text {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 143%;
+    letter-spacing: 0.2px;
+    color: #737373;
+}
+
+
+/*end_services*****************************************************************************************************************************/
+
+
+/*end_header*****************************************************************************************************************************/
+
+
+/*end_header*****************************************************************************************************************************/
+
+
+/*end_header*****************************************************************************************************************************/
+
+
+/*end_header*****************************************************************************************************************************/
+
+
+/*end_main*****************************************************************************************************************************/
+
+
+/*start_footer*****************************************************************************************************************************/
+
+.footer {}
+
+
+/*end_footer*****************************************************************************************************************************/
